1, Change ad9528 dt because SYSREF request is NOT generated by SYSREF_REQ-pin in hardware design 2, Revert ad9371n1/n2 dt because errors with PIN-MODE reports, to be further debug 3, Rename "a10ad9371foxconn" into "a10ad9371facc"

--- a/arch/arm/boot/dts/a10ad9371facc.dts
+++ b/arch/arm/boot/dts/a10ad9371facc.dts
@@ -108,9 +108,9 @@
 };
 
 #include "i2c_dev_si5338.dtsi"
-#include "a10ad9371foxconn_ad9528.dtsi"
-#include "a10ad9371foxconn_ad9371n1.dtsi"
-#include "a10ad9371foxconn_ad9371n2.dtsi"
-//#include "a10ad9371foxconn_ad9371n3.dtsi"
-//#include "a10ad9371foxconn_ad9371n4.dtsi"
+#include "a10ad9371facc_ad9528.dtsi"
+#include "a10ad9371facc_ad9371n1.dtsi"
+#include "a10ad9371facc_ad9371n2.dtsi"
+//#include "a10ad9371facc_ad9371n3.dtsi"
+//#include "a10ad9371facc_ad9371n4.dtsi"
 #include "eth_altr_tse.dtsi"
